[package]
name = "open_digger_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["cargo"] }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }